--- a/Ships/Ships.csproj
+++ b/Ships/Ships.csproj
@@ -54,7 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShipLocation.cs" />
+    <Compile Include="Not working.cs" />
     <Compile Include="ShipsMap.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
